добавил оформление раздела 'Мои проекты'

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
 
 	<div id="menu" class="menu">
-		<h1><i class="fa fa-grav fa-lg" style="margin: 0 10px 0 0" aria-hidden="true"></i> jebance.github.io</h1>
-		<hr>
+		<div class="logo">
+			<h1><a href="https://jebance.github.io/"><i class="fa fa-grav fa-lg" style="margin: 0 10px 0 0" aria-hidden="true"></i> jebance.github.io</a></h1>
+			<hr>
+		</div>
 		<ul class="nav">
 			<a id="myProjectsButton" class="button" onclick="wrap(this)"><li><i class="fa fa-code fa-fw" aria-hidden="true"></i>Мои проекты</li></a>
 		</ul>
@@ -36,8 +38,8 @@
 				</div>
 			</div>
 
-			<div id="page">
-				<h1>Lorem Ipsum</h1>
+			<div id="page" class="page">
+				<h2>Lorem Ipsum</h2>
 				<quotes>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</quotes>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula consequat nulla eu elementum. Nunc mauris quam, sollicitudin sed dapibus ac, sodales nec enim. Pellentesque ac tincidunt nunc. Maecenas erat diam, volutpat nec nunc non, dapibus tincidunt elit. Curabitur blandit, justo sit amet elementum imperdiet, tortor turpis sodales lacus, imperdiet finibus mauris lacus at leo. Mauris vestibulum elementum sem, nec elementum elit consectetur at. Nunc tristique facilisis tellus, at lobortis purus bibendum ac. Nulla congue sem metus, id malesuada dolor dictum sit amet. Praesent sagittis condimentum libero facilisis facilisis. Duis dapibus non odio pretium rutrum.</p>
 				<p>Pellentesque dignissim iaculis turpis in laoreet. Pellentesque et libero venenatis, pretium leo vitae, varius ipsum. Integer sagittis posuere aliquet. Mauris lobortis imperdiet mattis. Curabitur non tellus et arcu tempus commodo eu eget ipsum. Nullam at nisi dui. Praesent ac sapien nec nulla ultrices pretium non ut risus. Integer blandit aliquet eros vitae dapibus. Ut egestas mi eget ipsum scelerisque, sit amet ultricies nulla euismod. Aliquam porttitor suscipit pellentesque. Vestibulum volutpat ut orci ac lacinia. Morbi ut tellus a augue ultricies commodo ut eu mauris. In porttitor sagittis dui vitae pretium. Cras accumsan ornare lectus eget finibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
