--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
 </head>
 <body>
 
+	<h1 id="jsCheck">Check "Run JavaScript app" in settings</h1>
+
 	<div id="menu" class="menu">
 		<div class="logo">
 			<h1><a href="https://jebance.github.io/"><i class="fa fa-grav fa-lg" style="margin: 0 10px 0 0" aria-hidden="true"></i> jebance.github.io</a></h1>
 			<hr>
 		</div>
 		<ul class="nav">
-			<a id="myProjectsButton" class="button" onclick="wrap(this)"><li><i class="fa fa-code fa-fw" aria-hidden="true"></i>Мои проекты</li></a>
+			<a id="menuButtonMain" class="button" onclick="wrap(this)"><li><i class="fa fa-code fa-fw" aria-hidden="true"></i>Главная</li></a>
+			<a id="menuButtonSettings" class="button" onclick="wrap(this)"><li><i class="fa fa-code fa-fw" aria-hidden="true"></i>Настройки</li></a>
 		</ul>
 	</div>
 
 	<div id="hide" class="hide" onclick="menu.animation()"></div>
 	<div class="wraper">
-		<div class="content">
+		<div id="content" class="content">
 
 			<div class="header">
 				<div class="search">
@@ -39,17 +42,45 @@
 			</div>
 
 			<div id="page" class="page">
-				<h2>Lorem Ipsum</h2>
-				<quotes>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</quotes>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula consequat nulla eu elementum. Nunc mauris quam, sollicitudin sed dapibus ac, sodales nec enim. Pellentesque ac tincidunt nunc. Maecenas erat diam, volutpat nec nunc non, dapibus tincidunt elit. Curabitur blandit, justo sit amet elementum imperdiet, tortor turpis sodales lacus, imperdiet finibus mauris lacus at leo. Mauris vestibulum elementum sem, nec elementum elit consectetur at. Nunc tristique facilisis tellus, at lobortis purus bibendum ac. Nulla congue sem metus, id malesuada dolor dictum sit amet. Praesent sagittis condimentum libero facilisis facilisis. Duis dapibus non odio pretium rutrum.</p>
-				<p>Pellentesque dignissim iaculis turpis in laoreet. Pellentesque et libero venenatis, pretium leo vitae, varius ipsum. Integer sagittis posuere aliquet. Mauris lobortis imperdiet mattis. Curabitur non tellus et arcu tempus commodo eu eget ipsum. Nullam at nisi dui. Praesent ac sapien nec nulla ultrices pretium non ut risus. Integer blandit aliquet eros vitae dapibus. Ut egestas mi eget ipsum scelerisque, sit amet ultricies nulla euismod. Aliquam porttitor suscipit pellentesque. Vestibulum volutpat ut orci ac lacinia. Morbi ut tellus a augue ultricies commodo ut eu mauris. In porttitor sagittis dui vitae pretium. Cras accumsan ornare lectus eget finibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-				<p>Cras pulvinar orci augue, in viverra arcu tincidunt et. Nullam tempus justo enim, et ultrices ligula blandit ac. Suspendisse potenti. Duis commodo feugiat laoreet. Sed molestie egestas orci, nec pellentesque mauris volutpat sed. Quisque sagittis turpis ipsum, quis iaculis sapien tempor sed. Fusce dictum volutpat congue. In tempus sit amet eros ac egestas. Maecenas vitae dolor id nisi pretium faucibus in quis dolor. Nam mollis odio sit amet lectus pulvinar tristique. Cras non neque erat. Fusce nulla leo, lacinia ut volutpat ut, eleifend ac turpis. Quisque at nulla vitae felis viverra faucibus. Morbi ultricies hendrerit lacus nec dapibus. Nam auctor, arcu a vulputate interdum, est odio pulvinar velit, quis placerat nibh mi pulvinar mauris. Nam vel velit vitae odio mollis auctor.</p>
-				<p>Morbi sed tincidunt urna. Nam vitae lectus vel est consectetur efficitur. In fermentum tristique lorem eu blandit. Proin pharetra fermentum leo non faucibus. Suspendisse eleifend faucibus dui non viverra. Pellentesque porttitor, urna a imperdiet mollis, erat quam pharetra felis, vel laoreet mauris urna nec orci. Donec eget libero eget nibh vestibulum faucibus. Phasellus viverra libero erat, nec mattis elit rutrum et. Nunc sollicitudin purus id sagittis luctus. Sed elit lorem, ultricies at euismod ut, consectetur vel arcu. Cras et dolor nec enim fermentum maximus nec id lacus. Donec non ante tempor, tincidunt tellus ultrices, gravida dui.</p>
-				<p>Nullam at faucibus erat, in vehicula massa. Mauris quis eleifend diam, varius laoreet lectus. Donec ultrices hendrerit fringilla. Aliquam interdum placerat nisi, nec scelerisque eros auctor blandit. Morbi non interdum ligula. Nullam semper, arcu vel faucibus pharetra, diam quam varius orci, quis facilisis lacus risus et erat. Duis tempor sit amet massa sollicitudin porttitor. In porttitor orci vel dolor facilisis blandit. Integer sodales lobortis mi, sed sagittis ipsum pretium id. Pellentesque vitae malesuada purus. Nulla vel fringilla lacus, eu ultrices justo. Morbi fermentum commodo ipsum sit amet volutpat. Donec gravida dolor a suscipit placerat. Aliquam laoreet odio sapien, a volutpat odio faucibus sit amet.</p>
-				<p>Nullam at faucibus erat, in vehicula massa. Mauris quis eleifend diam, varius laoreet lectus. Donec ultrices hendrerit fringilla. Aliquam interdum placerat nisi, nec scelerisque eros auctor blandit. Morbi non interdum ligula. Nullam semper, arcu vel faucibus pharetra, diam quam varius orci, quis facilisis lacus risus et erat. Duis tempor sit amet massa sollicitudin porttitor. In porttitor orci vel dolor facilisis blandit. Integer sodales lobortis mi, sed sagittis ipsum pretium id. Pellentesque vitae malesuada purus. Nulla vel fringilla lacus, eu ultrices justo. Morbi fermentum commodo ipsum sit amet volutpat. Donec gravida dolor a suscipit placerat. Aliquam laoreet odio sapien, a volutpat odio faucibus sit amet.</p>
+				<div id="infoPage">
+					<div class="center">
+						<h2>Lorem Ipsum</h2>
+						<quotes>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</quotes>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula consequat nulla eu elementum. Nunc mauris quam, sollicitudin sed dapibus ac, sodales nec enim. Pellentesque ac tincidunt nunc. Maecenas erat diam, volutpat nec nunc non, dapibus tincidunt elit. Curabitur blandit, justo sit amet elementum imperdiet, tortor turpis sodales lacus, imperdiet finibus mauris lacus at leo. Mauris vestibulum elementum sem, nec elementum elit consectetur at. Nunc tristique facilisis tellus, at lobortis purus bibendum ac. Nulla congue sem metus, id malesuada dolor dictum sit amet. Praesent sagittis condimentum libero facilisis facilisis. Duis dapibus non odio pretium rutrum.</p>
+						<p>Pellentesque dignissim iaculis turpis in laoreet. Pellentesque et libero venenatis, pretium leo vitae, varius ipsum. Integer sagittis posuere aliquet. Mauris lobortis imperdiet mattis. Curabitur non tellus et arcu tempus commodo eu eget ipsum. Nullam at nisi dui. Praesent ac sapien nec nulla ultrices pretium non ut risus. Integer blandit aliquet eros vitae dapibus. Ut egestas mi eget ipsum scelerisque, sit amet ultricies nulla euismod. Aliquam porttitor suscipit pellentesque. Vestibulum volutpat ut orci ac lacinia. Morbi ut tellus a augue ultricies commodo ut eu mauris. In porttitor sagittis dui vitae pretium. Cras accumsan ornare lectus eget finibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+						<p>Cras pulvinar orci augue, in viverra arcu tincidunt et. Nullam tempus justo enim, et ultrices ligula blandit ac. Suspendisse potenti. Duis commodo feugiat laoreet. Sed molestie egestas orci, nec pellentesque mauris volutpat sed. Quisque sagittis turpis ipsum, quis iaculis sapien tempor sed. Fusce dictum volutpat congue. In tempus sit amet eros ac egestas. Maecenas vitae dolor id nisi pretium faucibus in quis dolor. Nam mollis odio sit amet lectus pulvinar tristique. Cras non neque erat. Fusce nulla leo, lacinia ut volutpat ut, eleifend ac turpis. Quisque at nulla vitae felis viverra faucibus. Morbi ultricies hendrerit lacus nec dapibus. Nam auctor, arcu a vulputate interdum, est odio pulvinar velit, quis placerat nibh mi pulvinar mauris. Nam vel velit vitae odio mollis auctor.</p>
+						<p>Morbi sed tincidunt urna. Nam vitae lectus vel est consectetur efficitur. In fermentum tristique lorem eu blandit. Proin pharetra fermentum leo non faucibus. Suspendisse eleifend faucibus dui non viverra. Pellentesque porttitor, urna a imperdiet mollis, erat quam pharetra felis, vel laoreet mauris urna nec orci. Donec eget libero eget nibh vestibulum faucibus. Phasellus viverra libero erat, nec mattis elit rutrum et. Nunc sollicitudin purus id sagittis luctus. Sed elit lorem, ultricies at euismod ut, consectetur vel arcu. Cras et dolor nec enim fermentum maximus nec id lacus. Donec non ante tempor, tincidunt tellus ultrices, gravida dui.</p>
+						<p>Nullam at faucibus erat, in vehicula massa. Mauris quis eleifend diam, varius laoreet lectus. Donec ultrices hendrerit fringilla. Aliquam interdum placerat nisi, nec scelerisque eros auctor blandit. Morbi non interdum ligula. Nullam semper, arcu vel faucibus pharetra, diam quam varius orci, quis facilisis lacus risus et erat. Duis tempor sit amet massa sollicitudin porttitor. In porttitor orci vel dolor facilisis blandit. Integer sodales lobortis mi, sed sagittis ipsum pretium id. Pellentesque vitae malesuada purus. Nulla vel fringilla lacus, eu ultrices justo. Morbi fermentum commodo ipsum sit amet volutpat. Donec gravida dolor a suscipit placerat. Aliquam laoreet odio sapien, a volutpat odio faucibus sit amet.</p>
+						<p>Nullam at faucibus erat, in vehicula massa. Mauris quis eleifend diam, varius laoreet lectus. Donec ultrices hendrerit fringilla. Aliquam interdum placerat nisi, nec scelerisque eros auctor blandit. Morbi non interdum ligula. Nullam semper, arcu vel faucibus pharetra, diam quam varius orci, quis facilisis lacus risus et erat. Duis tempor sit amet massa sollicitudin porttitor. In porttitor orci vel dolor facilisis blandit. Integer sodales lobortis mi, sed sagittis ipsum pretium id. Pellentesque vitae malesuada purus. Nulla vel fringilla lacus, eu ultrices justo. Morbi fermentum commodo ipsum sit amet volutpat. Donec gravida dolor a suscipit placerat. Aliquam laoreet odio sapien, a volutpat odio faucibus sit amet.</p>
+					</div>
+				</div>
+				<div id="accountPage" class="hide">
+					<div id="left" class="left">
+						<h2>Настройки</h2>
+					</div>
+					<div id="right" class="right">
+						<div id="container" class="container">
+							<h2>Контейнер</h2>
+							<p id="containerInfo">Все данные передаются через сервера в зашифрованном виде. Подключите свой ранее созданный PGP контейнер с расширением .nz, или создайте новый.</p>
+							<button id="containerBrowse" onclick="container.click(this)">Подключить</button>
+							<button id="containerCreate" onclick="container.click(this)">Создать</button>
+							<input id="containerNameInput" type="text" placeholder="Никнейм" class="selectable">
+							<input id="containerEmailInput" type="email" placeholder="E-mail" class="selectable">
+							<input id="containerPasswordInput" type="password" placeholder="Пароль" class="selectable">
+							<button id="containerPasswordAccept" onclick="container.click(this)">Подтвердить</button>
+							<button id="containerSave" onclick="container.click(this)">Сохранить</button>
+							<button id="containerOff" onclick="container.click(this)">Отключить</button>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
+
+    <div id="loader" class="hide"><div class="loader"></div></div>
+
+    <div id="progress" class="hide"></div>
+    <div id="bar" class="hide"></div>
 
 </body>
 </html>
