добавил Loader и Progress bar для загрузки скриптов

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-	<h1 id="jsCheck">Check "Run JavaScript app" in settings</h1>
+	<h1 id="jsCheck">Please turn JavaScript on and reload the page</h1>
 
 	<div id="menu" class="menu">
 		<div class="logo">
