--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</ul>
 	</div>
 
-	<div id="hide" class="hide" onclick="menu.animation()"></div>
+	<div id="shade" class="hide" onclick="menu.animation()"></div>
 
 	<div class="wraper">
 		<div id="content" class="content">
