--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 							<button id="containerPasswordAccept" onclick="container.click(this)" class="hide" name="container">Подтвердить</button>
 							<button id="containerSave" onclick="container.click(this)" class="hide" name="container">Сохранить</button>
 							<button id="containerOff" onclick="container.click(this)" class="hide" name="container">Отключить</button>
+							<input id="file" type="file" onchange="container.click(this)">
 							<a id="downloadNZPGPhref" class="hide"></a>
 						</div>
 					</div>
