поменял иконки в меню

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<hr>
 		</div>
 		<ul class="nav">
-			<a id="menuButtonMain" class="button" onclick="wrap(this)"><li><i class="fa fa-code fa-fw" aria-hidden="true"></i>Главная</li></a>
-			<a id="menuButtonSettings" class="button" onclick="wrap(this)"><li><i class="fa fa-code fa-fw" aria-hidden="true"></i>Настройки</li></a>
+			<a id="menuButtonMain" class="button" onclick="wrap(this)"><li><i class="fa fa-home fa-fw" aria-hidden="true"></i>Главная</li></a>
+			<a id="menuButtonSettings" class="button" onclick="wrap(this)"><li><i class="fa fa-cogs fa-fw" aria-hidden="true"></i>Настройки</li></a>
 		</ul>
 	</div>
 
