добавил в меню пункт Сообщения и удалил лишнее из style.css

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		</div>
 		<ul class="nav">
 			<a id="menuButtonMain" class="button" onclick="wrap(this)"><li><i class="fa fa-home fa-fw" aria-hidden="true"></i>Главная</li></a>
+			<a id="menuButtonMessages" class="hide" onclick="wrap(this)"><li><i class="fa fa-comments-o fa-fw" aria-hidden="true"></i>Сообщения</li></a>
 			<a id="menuButtonSettings" class="button" onclick="wrap(this)"><li><i class="fa fa-cogs fa-fw" aria-hidden="true"></i>Настройки</li></a>
 		</ul>
 	</div>
