--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>jebance.github.io</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="assets/css/style_new.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 	<link rel="stylesheet" href="assets/fa/css/font-awesome.min.css">
 	<script src="assets/js/script.js" defer></script>
 </head>
