--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<div id="contacts" class="hide">
 					<div class="leftItem" onclick="contact.animation()"><div style="display:grid;justify-content:center;"><i class="fa fa-plus fa-lg" aria-hidden="true"></i></div><div>Добавить контакт</div></div>
 					<div id="1" name="contact" class="leftItem">
-						<div class="avatar">OP</div>
+						<div class="avatar">👾</div>
 						<div class="leftItemInfo">
 							<div class="leftItemInfoTop">
 								<div class="leftItemInfoName">Oleg Prudkov</div><div class="leftItemInfoTime"><pre>22:22</pre></div>
@@ -77,38 +77,38 @@
 
 				<div id="chats">
 					<div id="1" name="chat" class="leftItem">
-						<div class="avatar">OP</div>
+						<div class="avatar">👾</div>
 						<div class="leftItemInfo">
 							<div class="leftItemInfoTop">
 								<div class="leftItemInfoName">Oleg Prudkov</div><div class="leftItemInfoTime"><pre>22:22</pre></div>
 							</div>
 							<div class="leftItemInfoBottom">
 								<div class="leftItemInfoText">Очень длинный текст последнего сообщения</div>
-								<!-- <div id="1" name="inboxCounter" class="leftItemInfoCounter">2222</div> -->
+								<div id="1" name="inboxCounter" class="leftItemInfoCounter">2222</div>
 							</div>
 						</div>
 					</div>
 					<div id="1" name="chat" class="leftItem">
-						<div class="avatar">OP</div>
+						<div class="avatar">👾</div>
 						<div class="leftItemInfo">
 							<div class="leftItemInfoTop">
 								<div class="leftItemInfoName">Oleg Prudkov</div><div class="leftItemInfoTime"><pre>22:22</pre></div>
 							</div>
 							<div class="leftItemInfoBottom">
 								<div class="leftItemInfoText">Очень длинный текст последнего сообщения</div>
-								<!-- <div id="1" name="inboxCounter" class="leftItemInfoCounter">2222</div> -->
+								<div id="1" name="inboxCounter" class="leftItemInfoCounter">2222</div>
 							</div>
 						</div>
 					</div>
 					<div id="1" name="chat" class="leftItem">
-						<div class="avatar">OP</div>
+						<div class="avatar">👾</div>
 						<div class="leftItemInfo">
 							<div class="leftItemInfoTop">
 								<div class="leftItemInfoName">Oleg Prudkov</div><div class="leftItemInfoTime"><pre>22:22</pre></div>
 							</div>
 							<div class="leftItemInfoBottom">
 								<div class="leftItemInfoText">Очень длинный текст последнего сообщения</div>
-								<!-- <div id="1" name="inboxCounter" class="leftItemInfoCounter">2222</div> -->
+								<div id="1" name="inboxCounter" class="leftItemInfoCounter">2222</div>
 							</div>
 						</div>
 					</div>
@@ -133,21 +133,21 @@
 				<div id="accountPage" class="hide">
 					<div id="container" class="container">
 						<h2>Контейнер</h2>
-			<div class="form">
-						<p id="containerInfo">Все данные передаются через сервера в зашифрованном виде. Подключите свой ранее созданный PGP контейнер с расширением .nz, или создайте новый.</p>
-						<p id="containerNickname" class="hide" name="container"></p>
-						<p id="containerEmail" class="hide" name="container"></p>
-						<button id="containerBrowse" onclick="container.click(this)" class="hide" name="container">Подключить</button>
-						<button id="containerCreate" onclick="container.click(this)" class="hide" name="container">Создать</button>
-						<input id="containerNameInput" onkeydown="{if(event.key=='Enter')container.click(containerPasswordAccept)}" type="text" placeholder="Никнейм" class="hide selectable" name="container">
-						<input id="containerEmailInput" onkeydown="{if(event.key=='Enter')container.click(containerPasswordAccept)}" type="email" placeholder="E-mail" class="hide selectable" name="container">
-						<input id="containerPasswordInput" onkeydown="{if(event.key=='Enter')container.click(containerPasswordAccept)}" type="password" placeholder="Пароль" class="hide selectable" name="container">
-						<button id="containerPasswordAccept" onclick="container.click(this)" class="hide" name="container">Подтвердить</button>
-						<button id="containerSave" onclick="container.click(this)" class="hide" name="container">Сохранить</button>
-						<button id="containerOff" onclick="container.click(this)" class="hide" name="container">Отключить</button>
-						<input id="file" type="file" onchange="container.click(this)" class="hide">
-						<a id="downloadNZPGPhref" class="hide"></a>
-			</div>
+<div class="form">
+			<p id="containerInfo">Все данные передаются через сервера в зашифрованном виде. Подключите свой ранее созданный PGP контейнер с расширением .nz, или создайте новый.</p>
+			<p id="containerNickname" class="hide" name="container"></p>
+			<p id="containerEmail" class="hide" name="container"></p>
+			<button id="containerBrowse" onclick="container.click(this)" class="hide" name="container">Подключить</button>
+			<button id="containerCreate" onclick="container.click(this)" class="hide" name="container">Создать</button>
+			<input id="containerNameInput" onkeydown="{if(event.key=='Enter')container.click(containerPasswordAccept)}" type="text" placeholder="Никнейм" class="hide selectable" name="container">
+			<input id="containerEmailInput" onkeydown="{if(event.key=='Enter')container.click(containerPasswordAccept)}" type="email" placeholder="E-mail" class="hide selectable" name="container">
+			<input id="containerPasswordInput" onkeydown="{if(event.key=='Enter')container.click(containerPasswordAccept)}" type="password" placeholder="Пароль" class="hide selectable" name="container">
+			<button id="containerPasswordAccept" onclick="container.click(this)" class="hide" name="container">Подтвердить</button>
+			<button id="containerSave" onclick="container.click(this)" class="hide" name="container">Сохранить</button>
+			<button id="containerOff" onclick="container.click(this)" class="hide" name="container">Отключить</button>
+			<input id="file" type="file" onchange="container.click(this)" class="hide">
+			<a id="downloadNZPGPhref" class="hide"></a>
+</div>
 					</div>
 				</div>
 
@@ -158,7 +158,7 @@
 
 		</div>
 
-		<div id="blockCenter" class="hide">
+		<div id="blockCenter" class="center">
 
 			<div id="blockCenterTop" class="centerTop">
 			</div>
