--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 		</div>
 
-		<div id="blockCenter" class="center">
+		<div id="blockCenter" class="hide">
 
 			<div id="blockCenterTop" class="centerTop">
 			</div>
@@ -183,8 +183,8 @@
 
 			<div id="blockCenterBottom" class="centerBottom">
 				<div id="chatInputArea" class="chatInputArea">
-					<div id="messageInputLine" class="messageInputLine"><input id="messageInput" type="text" placeholder="Сообщение"></div>
-					<button class="fa fa-chevron-circle-right fa-2x square" style="border-radius:50%;" aria-hidden="true"></button>
+					<div id="messageInputLine" class="messageInputLine"><input id="messageInput" type="text" placeholder="Сообщение" onkeydown="{if(event.key=='Enter')sendMessageButton.click()}"></div>
+					<button id="sendMessageButton" class="fa fa-chevron-circle-right fa-2x square" style="border-radius:50%;" aria-hidden="true" onclick="chat.sendMessage()"></button>
 				</div>
 			</div>
 
