оптимизировал код, подправил анимацию и переключение блоков

--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
 		<div id="blockCenter" class="hide">
 
 			<div id="blockCenterTop" class="centerTop">
+				<button id="backCenterTopButton" class="fa fa-chevron-left fa-2x square" aria-hidden="true" onclick="backWrap(this)"></button>
+				<div class="tools">
+				</div>
 			</div>
 
 			<div id="blockCenterCenter" class="centerCenter">
