добавил имя собеседника в шапку чата

--- a/index.html
+++ b/index.html
@@ -161,8 +161,15 @@
 		<div id="blockCenter" class="hide">
 
 			<div id="blockCenterTop" class="centerTop">
-				<button id="backCenterTopButton" class="fa fa-chevron-left fa-2x square" aria-hidden="true" onclick="backWrap(this)"></button>
 				<div class="tools">
+					<button id="backCenterTopButton" class="fa fa-chevron-left fa-2x square" aria-hidden="true" onclick="backWrap(this)"></button>
+					<div class="topChat">
+						<div class="avatarChat">👾</div>
+						<div class="topChatInfo">
+							<div id="topChatInfoName" class="topChatInfoName"></div>
+							<div id="topChatInfoText" class="topChatInfoText"></div>
+						</div>
+					</div>
 				</div>
 			</div>
 
